--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jwks-rsa": "^2.0.5",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
-    "winston": "^3.7.2"
+    "winston": "^3.7.2",
+    "winston-daily-rotate-file": "^4.6.1"
   }
 }
