--- a/iventory-fe/package.json
+++ b/iventory-fe/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "material-icons-react": "^1.0.4",
     "react": "17.0.0",
     "react-dom": "17.0.0",
